# Xylem

./: .gitignore  CMakeLists.txt  README.md  _cleanup.sh  _git.sh  build.bat  build.sh  mkdocs.en.yml  mkdocs.yml  test_tls_alpn_cert.pem  test_tls_alpn_key.pem  test_tls_hs_cert.pem  test_tls_hs_key.pem
.github/workflows/: cmake-multi-platform.yml  docs.yml
.kiro/agents/: code-expert.md
.kiro/hooks/: add-license-header.kiro.hook  auto-git-push.kiro.hook  build-test-coverage.kiro.hook  check-code-style.kiro.hook  check-license-header.kiro.hook  copy-compile-commands.kiro.hook  sync-compile-commands.kiro.hook  sync-design-docs.kiro.hook  sync-docs-on-change.kiro.hook  sync-product-md.kiro.hook  vs2022-build-env.kiro.hook
.kiro/settings/: mcp.json
.kiro/specs/dtls/: .config.kiro
.kiro/specs/dtls-test/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/http/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/network-tcp-udp/: design.md  requirements.md  tasks.md
.kiro/specs/rudp-test/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/tcp/: .config.kiro  design.md  requirements.md
.kiro/specs/tcp-test/: design.md  requirements.md  tasks.md
.kiro/specs/tls/: design.md  requirements.md  tasks.md
.kiro/specs/tls-test/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/udp/: .config.kiro  requirements.md
.kiro/specs/udp-test/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: build.md  codestyle.md  debug.md  dtls-design.md  dtls-test-design.md  license.md  principles.md  product.md  rudp-design.md  rudp-test-design.md  serial-design.md  serial-test-design.md  setup.md  structure.md  style.md  tcp-design.md  tcp-test-design.md  tech.md  tls-design.md  tls-test-design.md  udp-design.md  udp-test-design.md  uds-design.md  uds-test-design.md
cmake/: xylem-utils.cmake
docs/: FAQ.md  build.md  dtls-design.md  dtls-test-design.md  index.md  rudp-design.md  rudp-test-design.md  serial-design.md  serial-test-design.md  style-latest.md  style.md  tcp-design.md  tcp-test-design.md  tls-design.md  tls-test-design.md  udp-design.md  udp-test-design.md  uds-design.md  uds-test-design.md
docs-en/: index.md
docs-en/api/: addr.md  aes256.md  base64.md  dtls.md  fec.md  gzip.md  heap.md  http-client.md  http-common.md  http-server.md  index.md  json.md  list.md  logger.md  loop.md  platform.md  queue.md  rbtree.md  ringbuf.md  rudp.md  serial.md  sha.md  stack.md  tcp.md  thrdpool.md  tls.md  udp.md  uds.md  varint.md  ws-client.md  ws-common.md  ws-server.md
docs-en/guide/: build.md  quickstart.md
docs/api/: addr.md  aes256.md  base64.md  dtls.md  fec.md  gzip.md  heap.md  http-client.md  http-common.md  http-server.md  index.md  json.md  list.md  logger.md  loop.md  platform.md  queue.md  rbtree.md  ringbuf.md  rudp.md  serial.md  sha.md  stack.md  tcp.md  thrdpool.md  tls.md  udp.md  uds.md  varint.md  ws-client.md  ws-common.md  ws-server.md
docs/design/: dtls-design.md  rudp-design.md  serial-design.md  tcp-design.md  tls-design.md  udp-design.md  uds-design.md
docs/guide/: build.md  quickstart.md
examples/: CMakeLists.txt  dtls-echo-client.c  dtls-echo-server.c  http-echo-client.c  http-echo-server.c  http-session-client.c  http-static-server.c  https-echo-client.c  https-echo-server.c  https-static-server.c  serial-echo.c  serial-terminal.c  tcp-echo-client.c  tcp-echo-server.c  tls-echo-client.c  tls-echo-server.c  udp-echo-client.c  udp-echo-server.c  ws-echo-client.c  ws-echo-server.c  wss-echo-client.c  wss-echo-server.c
include/: xylem.h
include/deprecated/: c11-threads.h
include/xylem/: xylem-addr.h  xylem-aes256.h  xylem-base64.h  xylem-bswap.h  xylem-dtls.h  xylem-fec.h  xylem-gzip.h  xylem-heap.h  xylem-hmac256.h  xylem-json.h  xylem-list.h  xylem-logger.h  xylem-loop.h  xylem-platform.h  xylem-queue.h  xylem-rbtree.h  xylem-ringbuf.h  xylem-rudp.h  xylem-serial.h  xylem-sha1.h  xylem-sha256.h  xylem-stack.h  xylem-tcp.h  xylem-thrdpool.h  xylem-tls.h  xylem-udp.h  xylem-uds.h  xylem-utils.h  xylem-varint.h  xylem-waitgroup.h  xylem-xheap.h  xylem-xlist.h  xylem-xqueue.h  xylem-xrbtree.h  xylem-xstack.h
scripts/: install-deps.ps1  install-deps.sh
src/: mpsc.c  mpsc.h  xylem-addr.c  xylem-base64.c  xylem-bswap.c  xylem-dtls.c  xylem-heap.c  xylem-hmac256.c  xylem-list.c  xylem-logger.c  xylem-loop-io.h  xylem-loop.c  xylem-queue.c  xylem-rbtree.c  xylem-ringbuf.c  xylem-serial.c  xylem-sha1.c  xylem-sha256.c  xylem-stack.c  xylem-tcp.c  xylem-thrdpool.c  xylem-tls.c  xylem-udp.c  xylem-uds.c  xylem-utils.c  xylem-varint.c  xylem-waitgroup.c  xylem-xheap.c  xylem-xlist.c  xylem-xqueue.c  xylem-xrbtree.c  xylem-xstack.c  xylem.c
src/aes256/: xylem-aes256.c
src/aes256/tiny-AES-c/: aes.c
src/fec/: xylem-fec.c
src/gzip/: xylem-gzip.c
src/http/: http-common.c  http-common.h  http-transport-tcp.c  http-transport-tls-stub.c  http-transport-tls.c  http-transport.h  xylem-http-client.c  xylem-http-common.c  xylem-http-server.c  xylem-http-url.c  xylem-http-utils.c
src/json/: xylem-json.c
src/platform/: platform-info.h  platform-io.h  platform-poller.h  platform-serial.h  platform-socket.h  platform.h
src/rudp/: rudp-fec.c  rudp-fec.h  xylem-rudp.c
src/ws/: ws-common.c  ws-common.h  ws-frame.c  ws-frame.h  ws-handshake.c  ws-handshake.h  ws-transport-tcp.c  ws-transport-tls-stub.c  ws-transport-tls.c  ws-transport.h  ws-utf8.c  ws-utf8.h  xylem-ws-client.c  xylem-ws-server.c
tests/: CMakeLists.txt  assert.h  test-addr.c  test-aes256.c  test-base64.c  test-bswap.c  test-dtls.c  test-fec.c  test-gzip.c  test-heap.c  test-hmac256.c  test-http.c  test-json.c  test-list.c  test-logger.c  test-loop.c  test-platform-info.c  test-platform-io.c  test-platform-poller.c  test-platform-socket.c  test-queue.c  test-rbtree.c  test-ringbuf.c  test-rudp.c  test-serial.c  test-sha1.c  test-sha256.c  test-stack.c  test-tcp.c  test-thrdpool.c  test-tls.c  test-udp.c  test-uds.c  test-utils.c  test-varint.c  test-waitgroup.c  test-ws.c  test-xheap.c  test-xlist.c  test-xqueue.c  (+2 more)
(+23 files in other folders)
